# simple-weston-client

./: CMakeLists.txt  Dockerfile  README.md  run-weston.sh  simple-wayland-client.c  simple-weston-client.c
